--- a/examples/base/main.css
+++ b/examples/base/main.css
@@ -46,9 +46,11 @@ header { margin: 2em auto 0 auto; text-align: center; }
 
 .card { margin: 0 0 1em 0; background-color: #FFF; box-shadow: 1px 1px 1px rgba(0,0,0,0.5); padding: 1.5em; border-radius: 8px; }
 .card:last-of-type { margin-bottom: 0; }
-.card button { padding: 0.5em 2em; cursor: pointer; }
+.card button { padding: 0.5em 2em; margin-bottom: 1em; cursor: pointer; }
 .card p { margin: 0 0 1em 0; }
 .card p:last-of-type { margin: 0 0 0 0; }
 .card ul { margin: 1em 0 0 0; }
 .card li { margin-left: 2em; list-style-type: disc; margin-bottom: 1em; line-height: 1.25em; }
 .card li:last-of-type { margin-bottom: 0; }
+.card .output { background-color: rgb(216, 216, 216); margin: 1em 0 0 0; padding: 1.5em 1em; border-radius: 4px; }
+.card .output.code { font-family: monospace; font-size: 1.25em;}
