--- a/examples/base/main.css
+++ b/examples/base/main.css
@@ -49,11 +49,13 @@ header { margin: 2em auto 0 auto; text-align: center; }
 .card button { padding: 1em 2em; margin-bottom: 1em; cursor: pointer; border: none; background-color: #2995f4; color: #FFF; text-shadow: 1px 1px 1px #000; border-radius: 8px; font-weight: bold; }
 .card button:hover { box-shadow: 0 4px 6px #7d7d7d; background-color: #1767ad; }
 .card button:active { position: relative; top: 2; box-shadow: 0 2px 4px #7d7d7d; }
+.card input[type="number"], .card input[type="text"] { padding: 0.5em; border-radius: 4px; border: 1px solid #000; box-shadow: inset 1px 1px 0 #7d7d7d; }
 .card p { margin: 0 0 1em 0; }
 .card p:last-of-type { margin: 0 0 0 0; }
 .card ul { margin: 1em 0 0 0; }
 .card li { margin-left: 2em; list-style-type: disc; margin-bottom: 1em; line-height: 1.25em; }
 .card li:last-of-type { margin-bottom: 0; }
+.card .row { margin: 0.5em 0; }
 .card .output { background-color: #e9e9e9; padding: 1.5em 1em; border-radius: 4px; box-shadow: inset 1px 1px 4px #717171; }
 .card .output.code { font-family: monospace; font-size: 1.25em;}
 
