--- a/examples/base/main.css
+++ b/examples/base/main.css
@@ -37,7 +37,7 @@ h1 { font-size: 2em; font-weight: bold; margin-bottom: 0.5em;  }
 h2 { font-size: 1.5em; font-weight: bold; margin-bottom: 0.5em;  }
 em { font-style: italic; }
 p { line-height: 1.5em; }
-span.mono { font-family: monospace;}
+span.mono { font-family: monospace; font-size: 1.25em; }
 span.code { background-color: #e4e4e4; padding: 4px 8px; border-radius: 4px; }
 
 header, .content { max-width: 700px; margin: 0 auto; }
