--- a/examples/base/main.css
+++ b/examples/base/main.css
@@ -29,6 +29,7 @@ img { max-width: 100%; }
 a, a:visited { text-decoration: underline; color: rgb(0, 0, 0); -transition: all 0.15s ease-in-out; }
 a:hover { color: #F00; }
 strong { font-weight: bold; }
+.bold { font-weight: bold; }
 
 /* THEME */
 
