--- a/examples/base/main.css
+++ b/examples/base/main.css
@@ -60,6 +60,8 @@ header { margin: 2em auto 0 auto; text-align: center; }
 .card .row { margin: 0.5em 0; }
 .card .output { background-color: #e9e9e9; padding: 1.5em 1em; border-radius: 4px; box-shadow: inset 1px 1px 4px #717171; }
 .card .output.code { font-family: monospace; font-size: 1.25em;}
+.card .green { color: #047c00;}
+
 
 @media (min-width: 48em)
 {
