--- a/examples/base/main.css
+++ b/examples/base/main.css
@@ -59,7 +59,7 @@ header { margin: 2em auto 0 auto; text-align: center; }
 .card li:last-of-type { margin-bottom: 0; }
 .card .row { margin: 0.5em 0; }
 .card .output { background-color: #e9e9e9; padding: 1.5em 1em; border-radius: 4px; box-shadow: inset 1px 1px 4px #717171; }
-.card .output.code { font-family: monospace; font-size: 1em;}
+.card .output.code { font-family: monospace; font-size: 1em; line-height: 1.25em;}
 .card .browser-support img { width: 32px; vertical-align: middle; }
 .card .browser-support span { vertical-align: middle; margin-left: 8px; font-weight: bold; }
 
