--- a/examples/base/main.css
+++ b/examples/base/main.css
@@ -34,8 +34,9 @@ strong { font-weight: bold; }
 /* THEME */
 
 body { font-family: 'Arial', sans-serif; font-size: 1em; color: #000; background-color: rgb(207, 207, 207); background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgb(159, 159, 159) 100%); }
-h1 { font-size: 2em; font-weight: bold; margin-bottom: 0.5em;  }
-h2 { font-size: 1.5em; font-weight: bold; margin-bottom: 0.5em;  }
+h1 { font-size: 2em; font-weight: bold; margin-bottom: 0.5em; }
+h2 { font-size: 1.5em; font-weight: bold; margin-bottom: 0.5em; }
+h2 a { text-decoration: none; }
 em { font-style: italic; }
 p { line-height: 1.5em; }
 span.mono { font-family: monospace; font-size: 1.15em; }
