Tweaked content padding on mobile viewport.

--- a/examples/base/main.css
+++ b/examples/base/main.css
@@ -46,7 +46,7 @@ code { font-family: monospace; }
 header, .content { max-width: 95%; }
 
 header { margin: 2em auto 0 auto; text-align: center; }
-.content { margin: 2em auto; padding: 2em; max-width: 95%; }
+.content { margin: 2em auto; padding: 2em 0; max-width: 95%; }
 
 .card { margin: 0 0 2em 0; background-color: #FFF; box-shadow: 0 4px 24px rgba(0, 0, 0, 0.2); padding: 1.5em; border-radius: 8px; }
 .card:last-of-type { margin-bottom: 0; }
@@ -70,4 +70,5 @@ header { margin: 2em auto 0 auto; text-align: center; }
 @media (min-width: 48em)
 {
    header, .content { max-width: 700px }
+   .content { padding: 2em; }
 }
